# spades

./: .buildinfo  .clang-tidy  .gitignore  .gitmodules  Building.html  CMakeLists.txt  CONTRIBUTING.md  GettingStarted.html  InputFiles.html  Introduction.html  LICENSE  NOTICE  README.md  README.rst  SPADES.html  StyleGuide.html  Testing.html  Tutorials.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cleanup-cache.yml  docs.yml
CMake/: SpadesConfig.cmake.in  SpadesVersion.H.in  set_amrex_options.cmake  set_compile_flags.cmake  spades-utils.cmake
Docs/: CMakeLists.txt
Docs/doxygen/: Doxyfile.in  main_page.md
Docs/sphinx/: Building.rst  GettingStarted.rst  InputFiles.rst  Introduction.rst  Linting.rst  SPADES.rst  StyleGuide.rst  Testing.rst  Tutorials.rst  conf.py  index.rst  spelling-wordlist.txt
Scripts/: amrex_particle.py  fcompare_particles.py  link_particles_for_paraview.sh  plot_data.py  plot_profile.py
Source/: CMakeLists.txt  CellList.H  CellSortedParticleContainer.H  CellSortedParticleContainer.cpp  ConsoleIO.H  ConsoleIO.cpp  Constants.H  EntityData.H  EntityOps.H  EntityParticleContainer.H  EntityParticleContainer.cpp  Factory.H  IC.H  IC.cpp  Make.package  MessageData.H  MessageOps.H  MessageParticleContainer.H  MessageParticleContainer.cpp  Model.H  Model.cpp  ParticleData.H  ParticleData.cpp  ParticleOps.H  RunTime.H  SPADES.H  SPADES.cpp  SPADES.tpp  SpadesParticleContainer.H  SpadesParticleContainerImpl.H  Utilities.H  Utilities.cpp  main.cpp
Source/Models/: CMakeLists.txt  Phold.H  Phold.cpp
Tests/: CMakeLists.txt  test_seeds.sh
Tests/test_files/phold/: phold.inp
Tests/test_files/phold-conservative/: phold-conservative.inp
Tests/test_files/phold-conservative-encoded/: phold-conservative-encoded.inp
Tests/test_files/phold-conservative-radix/: phold-conservative-radix.inp
Tests/test_files/phold-encoded/: phold-encoded.inp
Tests/test_files/phold-greedy/: phold-greedy.inp
Tests/test_files/phold-greedy-encoded/: phold-greedy-encoded.inp
Tests/test_files/phold-greedy-radix/: phold-greedy-radix.inp
Tests/test_files/phold-greedy-ws/: phold-greedy-ws.inp
Tests/test_files/phold-multi-entity/: phold-multi-entity.inp
Tests/test_files/phold-multi-entity-encoded/: phold-multi-entity-encoded.inp
Tests/test_files/phold-multi-entity-radix/: phold-multi-entity-radix.inp
Tests/test_files/phold-radix/: phold-radix.inp
Tests/test_files/phold-seed/: phold-seed.inp
Tools/: test_seeds.sh
_sources/: InputFiles.rst.txt  StyleGuide.rst.txt  Testing.rst.txt  Tutorials.rst.txt  index.rst.txt
_sources/doxygen/html/: _console_i_o_8_h.rst.txt  _console_i_o_8_h_source.rst.txt  _console_i_o_8cpp.rst.txt  _constants_8_h.rst.txt  _constants_8_h_source.rst.txt  _entity_data_8_h.rst.txt  _entity_data_8_h_source.rst.txt  _entity_ops_8_h.rst.txt  _entity_ops_8_h_source.rst.txt  _entity_particle_container_8_h.rst.txt  _entity_particle_container_8_h_source.rst.txt  _entity_particle_container_8cpp.rst.txt  _factory_8_h.rst.txt  _factory_8_h_source.rst.txt  _i_c_8_h.rst.txt  _i_c_8_h_source.rst.txt  _i_c_8cpp.rst.txt  _message_data_8_h.rst.txt  _message_data_8_h_source.rst.txt  _message_ops_8_h.rst.txt  _message_ops_8_h_source.rst.txt  _message_particle_container_8_h.rst.txt  _message_particle_container_8_h_source.rst.txt  _message_particle_container_8cpp.rst.txt  _particle_data_8_h.rst.txt  _particle_data_8_h_source.rst.txt  _particle_ops_8_h.rst.txt  _particle_ops_8_h_source.rst.txt  _phold_8_h.rst.txt  _phold_8_h_source.rst.txt  _phold_8cpp.rst.txt  _run_time_8_h.rst.txt  _run_time_8_h_source.rst.txt  _s_p_a_d_e_s_8_h.rst.txt  _s_p_a_d_e_s_8_h_source.rst.txt  _s_p_a_d_e_s_8cpp.rst.txt  _spades_particle_container_8_h.rst.txt  _spades_particle_container_8_h_source.rst.txt  _spades_particle_container_impl_8_h.rst.txt  _spades_particle_container_impl_8_h_source.rst.txt  (+132 more)
doxygen/html/: _console_i_o_8_h.html  _console_i_o_8_h__dep__incl.map  _console_i_o_8_h__dep__incl.md5  _console_i_o_8_h__incl.map  _console_i_o_8_h__incl.md5  _console_i_o_8_h_source.html  _console_i_o_8cpp.html  _console_i_o_8cpp__incl.map  _console_i_o_8cpp__incl.md5  _constants_8_h.html  _constants_8_h__dep__incl.map  _constants_8_h__dep__incl.md5  _constants_8_h__incl.map  _constants_8_h__incl.md5  _constants_8_h_source.html  _entity_data_8_h.html  _entity_data_8_h__dep__incl.map  _entity_data_8_h__dep__incl.md5  _entity_data_8_h__incl.map  _entity_data_8_h__incl.md5  _entity_data_8_h_source.html  _entity_ops_8_h.html  _entity_ops_8_h__dep__incl.map  _entity_ops_8_h__dep__incl.md5  _entity_ops_8_h__incl.map  _entity_ops_8_h__incl.md5  _entity_ops_8_h_source.html  _entity_particle_container_8_h.html  _entity_particle_container_8_h__dep__incl.map  _entity_particle_container_8_h__dep__incl.md5  _entity_particle_container_8_h__incl.map  _entity_particle_container_8_h__incl.md5  _entity_particle_container_8_h_source.html  _entity_particle_container_8cpp.html  _entity_particle_container_8cpp__incl.map  _entity_particle_container_8cpp__incl.md5  _factory_8_h.html  _factory_8_h__incl.map  _factory_8_h__incl.md5  _factory_8_h_source.html  (+487 more)
kmc_diffusion/: README.md  pyproject.toml
kmc_diffusion/kmc_diffusion/: __init__.py  __main__.py  kmc_diffusion.py
kmc_diffusion_codes/: diffusion_rates_KMC_sites.py  notes.txt
vacancy_hop_codes/: vacancy_hop_kmc.py  vacancy_hop_minimize_energy.py
vacancy_hop_codes/cppversion/: GNUmakefile  inputs  vac_hop.cpp
